Fixed bugs related to display overflow, added red display border flash on display fill, add display clearing when a new operand is entered after a previous result

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     text-align: right;
     font-size: 10vh;
     color: white;
+    transition: 1s;
+    box-sizing: border-box;
 }
 
 #buttonsDiv {
@@ -66,5 +68,9 @@ button {
 
 .buttonClicked {
     background-color: rgba(255, 255, 255, 0.514);
+}
+
+.redBorder {
+    border: 1px solid red;
 }
 
